# kobold-qwen-fastapi

./: .gitignore  README.md  main.py  model_catalog.py  pyproject.toml  run.bat  run.py
tests/: test_binary_install.py  test_customvoice_mapping.py  test_model_catalog.py
